# ipcpp

./: CMakeLists.txt  README.md  package.xml
src/: ipcpp.cpp
