<?xml version="1.0"?>
<package>
  <name>ipcpp</name>
  <version>0.0.1</version>
  <description>Implementation of the iterative projection method in CPP using GLPK library</description>

  <maintainer email="rorsolino@robots.ox.ac.uk">Romeo Orsolino</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/hyq2max_controllers</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
